--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.1",
+    "react-use-gesture": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.9",
+    "waait": "^1.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
