FEAT : 소셜 로그인
카카오 로그인, 로그아웃 기능만 구현 배치나 backend에 데이터 넘기는 작업 남음

RESOLVES :

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,3 +1,6 @@
+# social login API
+/src/components/KakaoLoginData
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
