--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,30 @@
+server.port=8080
+
+# MySQL ??
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# DB Source URL
+#spring.datasource.url=jdbc:mysql://i8a508.p.ssafy.io:3306/mmc?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/ssavival?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
+
+# DB username
+spring.datasource.username=a602
+
+# DB password
+spring.datasource.password=a602a602
+
+#Spring Security ??
+spring.security.user.name=a602
+spring.security.user.password=a602a602
+
+# DDL(create, alter, drop) ??? DB? ?? ??? ??? ? ??.
+# ???? ??? ???? DDL(create, alter, drop) ? ??? ? ?? ???? ??
+# create : ?? ??? ??? ?? ???? / update : ??? ??? ?? alter? ???? ???? ???? create? ??
+spring.jpa.hibernate.ddl-auto=none
+
+# JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
+# ?? JPA ???? Hibernate? ????? ???? SQL? ????? ???? -> ???? SQL? ???? ????
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+
 
