UPDATE : 인코딩 방식 수정 및 port 번호 수정
utf-8로 수정 하고 8084로 port 번호 수정

RESOLVES :

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,5 +1,5 @@
 # social login API
-/src/components/KakaoLoginData
+./src/components/KakaoLoginData
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
