--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8080
+server.port=8084
 
-# MySQL ??
+# MySQL 연결
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DB Source URL
@@ -13,17 +13,17 @@ spring.datasource.username=a602
 # DB password
 spring.datasource.password=a602a602
 
-#Spring Security ??
+#Spring Security 설정
 spring.security.user.name=a602
 spring.security.user.password=a602a602
 
-# DDL(create, alter, drop) ??? DB? ?? ??? ??? ? ??.
-# ???? ??? ???? DDL(create, alter, drop) ? ??? ? ?? ???? ??
-# create : ?? ??? ??? ?? ???? / update : ??? ??? ?? alter? ???? ???? ???? create? ??
+# DDL(create, alter, drop) 정의시 DB의 고유 기능을 사용할 수 있다.
+# 프로젝트 실행시 자동으로 DDL(create, alter, drop) 을 생성할 것 인지 결정하는 설정
+# create : 매번 테이블 생성을 새로 시도한다 / update : 변경이 필요한 경우 alter로 변경되고 테이블이 없는경우 create가 된다
 spring.jpa.hibernate.ddl-auto=none
 
-# JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
-# ?? JPA ???? Hibernate? ????? ???? SQL? ????? ???? -> ???? SQL? ???? ????
+# JPA의 구현체의 Hibernate가 동작하면서 발생한 SQL의 가독성을 높여준다.
+# 실제 JPA 구현체인 Hibernate가 동작하면서 발생하는 SQL을 포맷팅해서 출력한다 -> 실행되는 SQL의 가독성을 높여준다
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
