--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,12 @@
 version: "3"
 
 services:
-  # back:
-  #   container_name: be
-  #   build: ./backend
-  #   ports:
-  #     - "8084:8080"
-  #   depends_on:
-  #     - db
-  #   restart: on-failure
+  back:
+    container_name: be
+    build: ./backend
+    ports:
+      - "8084:8084"
+    restart: on-failure
 
   front:
     container_name: fe
