--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=8084
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DB Source URL
-#spring.datasource.url=jdbc:mysql://i8a508.p.ssafy.io:3306/mmc?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
-spring.datasource.url=jdbc:mysql://localhost:3306/ssavival?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://k8a602.p.ssafy.io:3307/ssavival?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
+#spring.datasource.url=jdbc:mysql://localhost:3306/ssavival?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
 
 # DB username
 spring.datasource.username=a602
