--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -44,7 +44,8 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.json/json
 	implementation group: 'org.json', name: 'json', version: '20210307'
 	implementation 'com.google.code.gson:gson:2.8.7'
-
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'com.kakao.sdk:kakao-sdk-auth:1.0.1'
 }
 
 tasks.named('test') {
