--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -36,3 +36,8 @@ cloud.aws.s3.bucket=ssafy-mmc
 cloud.aws.s3.bucket.url=https://s3.ap-northeast-2.amazonaws.com/ssafy-mmc
 
 spring.web.resources.static-locations=classpath:/static/
+
+#redis 설정
+spring.cache.type=redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
