--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.3.0",
     "file-loader": "^6.2.0",
     "gifuct-js": "^2.1.2",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^18.2.0",
