--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
     "react-spring": "^9.7.1",
+    "react-swipeable-views": "^0.14.0",
     "react-use-gesture": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
