--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -41,6 +41,7 @@ spring.web.resources.static-locations=classpath:/static/
 spring.cache.type=redis
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
+spring.cache.redis.cache-null-values=true
 
 #영상 업로드 설정
 spring.servlet.multipart.enabled=true
