--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "file-loader": "^6.2.0",
     "gifuct-js": "^2.1.2",
     "html2canvas": "^1.4.1",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^3.3.0",
