--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DB Source URL
 #spring.datasource.url=jdbc:mysql://k8a602.p.ssafy.io:3307/ssavival?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
+#spring.datasource.url=jdbc:mysql://localhost:3306/jpatest?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
 spring.datasource.url=jdbc:mysql://localhost:3306/ssavival?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
 
 # DB username
@@ -20,6 +21,7 @@ spring.security.user.password=a602a602
 # DDL(create, alter, drop) 정의시 DB의 고유 기능을 사용할 수 있다.
 # 프로젝트 실행시 자동으로 DDL(create, alter, drop) 을 생성할 것 인지 결정하는 설정
 # create : 매번 테이블 생성을 새로 시도한다 / update : 변경이 필요한 경우 alter로 변경되고 테이블이 없는경우 create가 된다
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=none
 
 # JPA의 구현체의 Hibernate가 동작하면서 발생한 SQL의 가독성을 높여준다.
