--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,7 +17,19 @@ spring.datasource.password=a602a602
 #Spring Security 설정
 spring.security.user.name=a602
 spring.security.user.password=a602a602
+#Kakao
+spring.security.oauth2.client.registration.kakao.client-id = a8fc6ea8ba88c3b516a9661dc79841eb
+spring.security.oauth2.client.registration.kakao.client-secret = WG3usQJCmWqPSU6TdfZ7VNOP6d1iiD3W
+spring.security.oauth2.client.registration.kakao.scope = profile_nickname, account_email
+spring.security.oauth2.client.registration.kakao.client-name = Kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type = authorization_code
+spring.security.oauth2.client.registration.kakao.redirect-uri = http://k8a602.p.ssafy.io:8080/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.client-authentication-method = POST
 
+spring.security.oauth2.client.provider.kakao.authorization-uri = https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri = https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri = https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute = id
 # DDL(create, alter, drop) 정의시 DB의 고유 기능을 사용할 수 있다.
 # 프로젝트 실행시 자동으로 DDL(create, alter, drop) 을 생성할 것 인지 결정하는 설정
 # create : 매번 테이블 생성을 새로 시도한다 / update : 변경이 필요한 경우 alter로 변경되고 테이블이 없는경우 create가 된다
@@ -40,10 +52,10 @@ cloud.aws.s3.bucket.url=https://s3.ap-northeast-2.amazonaws.com/ssafy-mmc
 spring.web.resources.static-locations=classpath:/static/
 
 #redis 설정
-spring.cache.type=redis
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-spring.cache.redis.cache-null-values=true
+#spring.cache.type=redis
+#spring.redis.host=127.0.0.1
+#spring.redis.port=6379
+#spring.cache.redis.cache-null-values=true
 
 #영상 업로드 설정
 spring.servlet.multipart.enabled=true
