--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ssavival?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
 
 # DB username
-spring.datasource.username=a602
+spring.datasource.username=root
 
 # DB password
-spring.datasource.password=a602a602
+spring.datasource.password=0401
 
 #Spring Security 설정
 spring.security.user.name=a602
