--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,12 +21,12 @@ spring.datasource.password=a602a602
 spring.security.user.name=a602
 spring.security.user.password=a602a602
 #Kakao
-spring.security.oauth2.client.registration.kakao.client-id = a8fc6ea8ba88c3b516a9661dc79841eb
-spring.security.oauth2.client.registration.kakao.client-secret = WG3usQJCmWqPSU6TdfZ7VNOP6d1iiD3W
+spring.security.oauth2.client.registration.kakao.client-id = KAKAO_CLIENT_ID
+spring.security.oauth2.client.registration.kakao.client-secret = KAKAO_CLIENT_SECRET
 spring.security.oauth2.client.registration.kakao.scope = profile_nickname, account_email
 spring.security.oauth2.client.registration.kakao.client-name = Kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type = authorization_code
-spring.security.oauth2.client.registration.kakao.redirect-uri = http://k8a602.p.ssafy.io:8080/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.redirect-uri = KAKAO_REDIRECT_URI
 spring.security.oauth2.client.registration.kakao.client-authentication-method = POST
 
 spring.security.oauth2.client.provider.kakao.authorization-uri = https://kauth.kakao.com/oauth/authorize
@@ -45,8 +45,8 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
 #s3 설정
-cloud.aws.credentials.access-key=AKIAZQBHRBP3TDZOFSQ6
-cloud.aws.credentials.secret-key=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
+cloud.aws.credentials.access-key=ACCESS_KEY
+cloud.aws.credentials.secret-key=SECRET_KEY
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.stack.auto=false
 cloud.aws.s3.bucket=ssafy-mmc
